--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,6 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
-      <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
       <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
       <link rel="stylesheet" href="bower_components/ui-select/dist/select.css" />
       <link rel="stylesheet" href="bower_components/selectize/dist/css/selectize.css" />
@@ -21,6 +20,7 @@
       <link rel="stylesheet" href="bower_components/angularPrint/angularPrint.css" />
       <!-- endbower -->
     <!-- endbuild -->
+    <link rel="stylesheet" media="all" href="bower_components/bootswatch-dist/css/bootstrap.css" />
     <!-- build:css({.tmp,client}) app/app.css -->
       <link rel="stylesheet" href="app/app.css">
       <!-- injector:css -->
@@ -94,6 +94,7 @@
       <!-- endbower -->
       <!--<script src="bower_components/socket.io-client/dist/socket.io.js"></script>
     <!-- endbuild -->
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- build:js(.tmp) app/app.js -->
       <script src="app/app.js"></script>
       <!-- injector:js -->
