--- a/www/index.html
+++ b/www/index.html
@@ -90,6 +90,7 @@
       <script src="bower_components/angular-moment/angular-moment.js"></script>
       <script src="bower_components/angularPrint/angularPrint.js"></script>
       <script src="bower_components/ngCordova/dist/ng-cordova.min.js"></script>
+      <script src="bower_components/moment-timezone/builds/moment-timezone-with-data-2012-2022.js"></script>
       <script src="cordova.js"></script>
       <!-- endbower -->
       <!--<script src="bower_components/socket.io-client/dist/socket.io.js"></script>
