--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -20,7 +20,7 @@
     <div layout="row" flex="10">
       <md-input-container class="bering" flex>
         <label>Pilot</label>
-        <md-select ng-model="main.assessment.pilot" ng-change="main.checkNotifications($event)" ng-model-options="{trackBy: '$value._id'}">
+        <md-select ng-model="main.assessment.pilotObj" ng-change="main.checkNotifications($event)" ng-model-options="{trackBy: '$value._id'}">
           <md-option ng-repeat="pilot in main.pilots | orderBy: 'name'" ng-value="pilot"
               ng-selected="main.checkPilot(pilot.name)">
             {{pilot.name}}
@@ -29,7 +29,7 @@
       </md-input-container>
       <md-input-container class="bering" flex>
         <label>Equipment</label>
-        <md-select ng-model="main.assessment.equipment" ng-change="main.changeFlight($event)" ng-model-options="{trackBy: '$value.id'}">
+        <md-select ng-model="main.assessment.equipmentObj" ng-change="main.changeFlight($event)" ng-model-options="{trackBy: '$value.id'}">
           <md-option ng-repeat="equipment in main.equipment | orderBy: 'name'" ng-value="equipment"
             ng-selected="{{equipment.name==='Caravan'}}">
             {{equipment.name}}
@@ -159,11 +159,12 @@
     <div ng-if="main.pixelRatio(2)" hide-gt-xs flex="2"></div>
     <div ng-if="main.pixelRatio(3)" hide-gt-sm flex="1"></div>
     <div ng-if="main.pixelRatio(3)" hide-gt-xs flex="1"></div>
-    <div ng-if="main.assessment.flight" layout="row" flex="10">
-      <md-button class="md-raised md-warn" flex ng-click="main.addAirport($event)">Add Airport</md-button>
-      <md-button class="md-raised md-purple" flex ng-click="main.changeFlight($event)">Refresh Assessment</md-button>
-      <md-button class="md-raised md-accent" flex ng-click="main.clear()">Clear Assessment</md-button>
-      <md-button class="md-raised md-primary" flex ng-click="main.submit($event)">Submit Assessment</md-button>
+    <div ng-if="main.assessment.flight" layout="row" flex="15">
+      <md-button class="md-raised md-warn" flex ng-click="main.addAirport($event)">Add<br> Airport</md-button>
+      <md-button class="md-raised md-blue" flex ng-click="main.addComment($event)">Assessment <br>Comment</md-button>
+      <md-button class="md-raised md-purple" flex ng-click="main.changeFlight($event)">Refresh<br> Assessment</md-button>
+      <md-button class="md-raised md-accent" flex ng-click="main.clear()">Clear<br> Assessment</md-button>
+      <md-button class="md-raised md-primary" flex ng-click="main.submit($event)">Submit<br> Assessment</md-button>
     </div>
   </div>
 </div>
