--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -123,7 +123,7 @@
             </md-button>
             <md-menu-content width="4" ng-mouseleave="$mdMenu.close()">
               <md-menu-item>
-                <md-button class="md-raised md-accent" ng-click="main.changeParam($event,$index,'runwayConditions','Runway Condition')">Change Runway Condition</md-button>
+                <md-button class="md-raised md-accent" ng-click="main.changeParam($event,$index,'runwayConditions','Runway Condition')">Change/View Runway Condition</md-button>
               </md-menu-item>
             </md-menu-content>
           </md-menu>
