resize small screen menu link

--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -2,17 +2,7 @@
 <div flex layout="row">
   <sidebar layout="row"></sidebar>
   <div flex layout="column" id="content">
-    <div ng-if="main.pixelRatio(1)" layout="row" flex="10">
-      <a hide-gt-sm href="#" ng-click="main.toggleMenu()" class="box-shadow-menu">
-        Menu
-      </a>
-    </div>
-    <div ng-if="main.pixelRatio(2)" layout="row" flex="5">
-      <a hide-gt-sm href="#" ng-click="main.toggleMenu()" class="box-shadow-menu">
-        Menu
-      </a>
-    </div>
-    <div ng-if="main.pixelRatio(3)" layout="row" flex="3">
+    <div layout="row" flex="5">
       <a hide-gt-sm href="#" ng-click="main.toggleMenu()" class="box-shadow-menu">
         Menu
       </a>
